--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 
+server.port = 8080
+#spring.datasource.url=jdbc:h2:mem:dcbapp
+#spring.datasource.driverCLassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=ecommerce;trustServerCertificate=true
+spring.datasource.username=sa
+spring.datasource.password=abcd1234
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2016Dialect
+# allow table's name flow our mindset like tblProduct
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#format sql queries is easy to read
+spring.jpa.properties.hibernate.format_sql=true
