--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.datasource.username=sa
 spring.datasource.password=abcd1234
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2016Dialect
+spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.SQLServer2016Dialect
 # allow table's name flow our mindset like tblProduct
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 #format sql queries is easy to read
